[package]
name    = "yolo26-pose"
version = "0.1.0"
edition = "2021"

[dependencies]
# Direct TensorRT engine runtime. Engines are built with the installed trtexec.
tensorrt-infer = "0.1"

# Image loading / resizing (no OpenCV dependency)
image  = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Fast float slice ops
bytemuck = "1"

anyhow = "1"

# GPU compositing for pose overlays. The same renderer is used for images and video frames.
wgpu = "24"
pollster = "0.4"
